--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-# README
+# Module.TestModule - PowerShell Module
+![Commit to Main](https://github.com/AabyeHald/psm.module/actions/workflows/Module.TestModule.Commit.yml/badge.svg)
+![Release](https://github.com/AabyeHald/psm.module/actions/workflows/Module.TestModule.Release.yml/badge.svg)
+
